--- a/src/components/SubjectNoteDetail/SubjectNoteDetail.css
+++ b/src/components/SubjectNoteDetail/SubjectNoteDetail.css
@@ -19,7 +19,7 @@
 }
 
 .subject-note {
-    width: 100%;
+    max-width: 100%;
 }
 
 .subject-note p {
